# opencl-matrix-multiplication

./: .gitignore  CMakeLists.txt  Makefile  README.md  matmul.cpp  matmul.cpp.bak  matrix_lib.cpp  mult  optimize_common.cl  optimize_per_row.cl  optimize_private.cl
